@@ -122,12 +122,18 @@ void FSUB(MPI_Alltoallw)(void*     sendbuf,
   ccomm = PMPI_Comm_f2c(*comm);
   PMPI_Comm_size(ccomm, &size);
 
-  csendtypes = malloc(size * sizeof(MPI_Datatype));
+  if (sendbuf != MPI_IN_PLACE)
+  {
+    csendtypes = malloc(size * sizeof(MPI_Datatype));
+  }
   crecvtypes = malloc(size * sizeof(MPI_Datatype));
 
   while (size > 0)
   {
-    csendtypes[size-1] = PMPI_Type_f2c(sendtypes[size-1]);
+    if (sendbuf != MPI_IN_PLACE)
+    {
+      csendtypes[size-1] = PMPI_Type_f2c(sendtypes[size-1]);
+    }
     crecvtypes[size-1] = PMPI_Type_f2c(recvtypes[size-1]);
     --size;
   }
@@ -135,7 +141,10 @@ void FSUB(MPI_Alltoallw)(void*     sendbuf,
   *ierr = MPI_Alltoallw(sendbuf, sendcounts, sdispls, csendtypes, recvbuf,
                 recvcounts, rdispls, crecvtypes, ccomm);
 
-  free(csendtypes);
+  if (sendbuf != MPI_IN_PLACE)
+  {
+    free(csendtypes);
+  }
   free(crecvtypes);
 
   SCOREP_IN_MEASUREMENT_DECREMENT();
@@ -185,12 +194,18 @@ void FSUB(MPI_Ialltoallw)(void*     sendbuf,
   ccomm = PMPI_Comm_f2c(*comm);
   PMPI_Comm_size(ccomm, &size);
 
-  csendtypes = malloc(size * sizeof(MPI_Datatype));
+  if (sendbuf != MPI_IN_PLACE)
+  {
+    csendtypes = malloc(size * sizeof(MPI_Datatype));
+  }
   crecvtypes = malloc(size * sizeof(MPI_Datatype));
 
   while (size > 0)
   {
-    csendtypes[size-1] = PMPI_Type_f2c(sendtypes[size-1]);
+    if (sendbuf != MPI_IN_PLACE)
+    {
+      csendtypes[size-1] = PMPI_Type_f2c(sendtypes[size-1]);
+    }
     crecvtypes[size-1] = PMPI_Type_f2c(recvtypes[size-1]);
     --size;
   }
@@ -200,7 +215,10 @@ void FSUB(MPI_Ialltoallw)(void*     sendbuf,
 
   *request = PMPI_Request_c2f(crequest);
 
-  free(csendtypes);
+  if(sendbuf != MPI_IN_PLACE)
+  {
+    free(csendtypes);
+  }
   free(crecvtypes);
   SCOREP_IN_MEASUREMENT_DECREMENT();
 }
